# exercise

./: .gitignore
awk/: address.txt  address1.txt  checkage.awk  email.txt  email1.txt  passwd.awk  proc.awk
c/apue/: meminfo.c  pager.c  pager1.c  pipe.c  share_mem.c  term.c
c/gtk/lifepad3/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  lifepad3.glade  main.c
c/gtk/lifepad3/src/.deps/: callbacks.Po  main.Po
c/sample/: pthread_share.c  pthread_test.c  pthread_test2.c  zombies.c
cpp/stl/: add1.cpp  add2.cpp  add3.cpp  array1.cpp  array2.cpp  auto_ptr.cpp  binary_predicate.cpp  bind2nd.cpp  carray.hpp  copy.cpp  countptr.hpp  countptr_test.cpp  for_each1.cpp  for_each2.cpp  list1.cpp  list2.cpp  map1.cpp  map2.cpp  map3.cpp  map4.cpp  member.hpp  print.hpp  set1.cpp  set2.cpp  set3.cpp  set_range_bound.cpp  transform1.cpp  transform2.cpp  unary_predicate.cpp  vector_array.cpp  vector_capacity.cpp
golang/base64test/: base64test
golang/bstreetest/: main.go
golang/cgotest/: main.go
golang/combining/: main.go
golang/equal_partion/: main.go  购买图书清单.txt
golang/generic-function/: main.go
golang/gptest/: main1.go  (+1 more)
sed/: append.sed  insert.sed  modify.sed  test.txt
shell/: caseans.sh  caseparam.sh  casereport.sh  caseselect.sh  caseselect1.sh  for_UC.sh  for_color.sh  for_ls.sh  for_param.sh  ifmkdir  ignore_hash.sh  package_mgmt  part_admin  readfield.sh  readpair.sh  records1.txt  test01.sh  test02.sh  test03.sh  test04.sh  test05.sh  test06.sh  until_who.sh  while_count.sh  while_read_file.sh  while_valid_name.sh
thrift/: test.thrift
(+486 files in other folders)
